fix: save progress button visibility.

--- a/src/scss/header/header.scss
+++ b/src/scss/header/header.scss
@@ -187,3 +187,7 @@ body {
 		}
 	}
 }
+
+.save-memory-page-progress {
+	display: none
+}
